--- a/mcfood-frontend/src/components/Header.css
+++ b/mcfood-frontend/src/components/Header.css
@@ -352,3 +352,27 @@ html {
 .header-link.active::after {
   width: 80%;
 }
+/* .header-logout-btn {
+  background: #000000;
+  border: none;
+  color: #333;
+  cursor: pointer;
+  padding: 8px 16px;
+  font-size: 1rem;
+} */
+
+
+.header-logout-btn {
+  text-decoration: none;
+  color: #fff;
+  background-color: #000000;
+  padding: 0.5rem 1.5rem;
+  border-radius: 25px;
+  font-weight: 500;
+  transition: all 0.3s ease;
+  border: 2px solid #000000;
+}
+
+.header-logout-btn:hover {
+  color: #ffcc00;
+}
