--- a/mcfood-frontend/src/Styles/ProfilePage.css
+++ b/mcfood-frontend/src/Styles/ProfilePage.css
@@ -139,3 +139,14 @@
   background: linear-gradient(to right, #5b21b6, #3b82f6);
   transform: translateY(-2px);
 }
+.popup {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color: #4CAF50;
+  color: white;
+  padding: 15px;
+  border-radius: 5px;
+  display: none;
+  z-index: 1000;
+}
