--- a/mcfood-frontend/src/Styles/Register.css
+++ b/mcfood-frontend/src/Styles/Register.css
@@ -177,3 +177,14 @@
   font-size: 0.9em;
   margin-top: 5px;
 }
+.btn1 {
+  background: none;
+  color: #fff;
+  border: none;
+  font-weight: 500;
+  cursor: pointer;
+  text-decoration: underline;
+}
+.btn1:hover {
+    border: #fff;
+}
