--- a/mcfood-frontend/src/Styles/ProfilePage.css
+++ b/mcfood-frontend/src/Styles/ProfilePage.css
@@ -1,5 +1,5 @@
 /* ProfilePage.css */
-
+/*
 .profile-card {
   max-width: 600px;
   margin: 40px auto;
@@ -150,3 +150,4 @@
   display: none;
   z-index: 1000;
 }
+  */
